force-app/main/default/objects/ssot__PromotionStage__dlm/fields/ssot__PromotionStageType__c.field-meta.xml
<CustomField>
    <fullName>ssot__PromotionStageType__c</fullName>
    <label>Promotion Stage Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PromotionStageType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>