force-app/main/default/objects/ssot__PromotionStage__dlm/fields/ssot__ReferredPartyJournalSubTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferredPartyJournalSubTypeId__c</fullName>
    <label>Referred Party Journal Subtype</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferredPartyJournalSubTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>