force-app/main/default/objects/ssot__PromotionStage__dlm/fields/ssot__ReferrerJournalSubTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferrerJournalSubTypeId__c</fullName>
    <label>Referrer Journal Subtype</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferrerJournalSubTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>