force-app/main/default/objects/ssot__PromotionStage__dlm/fields/ssot__rel_1729831692138_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729831692138_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionStage_ReferrerJournalSubTyp_rel</label>
    <referenceTo>ssot__LoyaltyJournalSubtype__dlm</referenceTo>
    <relationshipLabel>PromotionStage_ReferrerJournalSubTyp_rel</relationshipLabel>
    <relationshipName>rel_1729831692138_end</relationshipName>
    <type>Lookup</type>
</CustomField>