force-app/main/default/objects/ssot__PromotionStage__dlm/fields/ssot__rel_1731659062149_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731659062149_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionStage_PromotionId_map_Promo_rel</label>
    <referenceTo>ssot__Promotion__dlm</referenceTo>
    <relationshipLabel>PromotionStage_PromotionId_map_Promo_rel</relationshipLabel>
    <relationshipName>rel_1731659062149_end</relationshipName>
    <type>Lookup</type>
</CustomField>