force-app/main/default/objects/ssot__PromotionStage__dlm/fields/ssot__StageConfigurationText__c.field-meta.xml
<CustomField>
    <fullName>ssot__StageConfigurationText__c</fullName>
    <label>Stage Configuration</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StageConfigurationText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>